01.denyAlltoStaging.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blockalltostaging
  namespace: staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
