02.allAllToProduction.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allalltoproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
