03.denyAllfromEgress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyallegressfromproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
