04.alloAllEgressFromProduction.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowallegressfromproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: 
  - {}
