05.denyAllToProduction.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyalltoproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
