06.allow80IngressToProduction.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow80ingresstoproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      ports:
      - protocol: TCP
        port: 80
