07.allow53EgressDenyOtherEgressForProduction.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow53egressdenyotheregressforproduction
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
