08.allow80IngressDenyAllEgressForDevelopment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow80ingressdenyallegressfordevelopment
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
      - protocol: TCP
        port: 80
