09.denyAllIngressAndEgressFordevelopmentchkpod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyallingressandegressfordevelopmentchkpod
  namespace: development
spec:
  podSelector: 
    matchLabels:
      run: developmentchkpob
  policyTypes:
  - Ingress
  - Egress
