09allowEgressTCPUDP53Only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
