10.allow80IngressToStagingDenyEgress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow80ingresstostagingdenyegress
  namespace: staging
spec:
  podSelector: 
    matchLabels:
      run: stagingweb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 80
