11allowIngAndDenyEGS.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: 
    matchLabels:
      app: ns-prd-web
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 80
