12denyEGPod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: 
    matchLabels:
      run: prdpod
  policyTypes:
  - Egress
