15allING80NSPODDenyEGALL.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: 
    matchLabels:
      app: anotherweb
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          conn: ok
    - podSelector:
        matchLabels:
          run: anotherpod
