allowTCP80HTTP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      ports: 
      - protocol: TCP
        port: 80
  egress: 
    - to: 
      ports:
      - protocol: TCP
        port: 80
