ns-prd-policy-podselector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-prd-np
  namespace: ns-prd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
    #  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: ns-test-pod
      ports: 
      - protocol:
        port: 80
